# docs/swagger.json
@@ -16,7 +16,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get all photos of the current user",
+                "description": "Get photo by id or get all photos for current user. If the id of the photo is specified, then the model will be returned. If id is not specified then will return an array of models",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,16 +26,27 @@
                 "tags": [
                     "api"
                 ],
-                "summary": "get photos",
-                "operationId": "get-photos",
+                "summary": "get photo",
+                "operationId": "get-photo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Photo ID",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/response.GetPhoto"
-                            }
+                            "$ref": "#/definitions/response.GetPhoto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
                         }
                     },
                     "401": {
@@ -58,7 +69,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "upload photo to server",
+                "description": "Upload photo to server",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,14 +114,14 @@
                 }
             }
         },
-        "/api/v1/photo/{id}": {
+        "/api/v1/photo/random": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get photo by id",
+                "description": "Get a random photo where the rating isn't worth",
                 "consumes": [
                     "application/json"
                 ],
@@ -120,17 +131,8 @@
                 "tags": [
                     "api"
                 ],
-                "summary": "get photo",
-                "operationId": "get-photo",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Photo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "get random photo",
+                "operationId": "get-random-photo",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -138,10 +140,10 @@
                             "$ref": "#/definitions/response.GetPhoto"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "204": {
+                        "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/response.Error"
+                            "$ref": "#/definitions/response.Message"
                         }
                     },
                     "401": {
@@ -166,7 +168,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "set rating for photo",
+                "description": "Set rating for photo",
                 "consumes": [
                     "application/json"
                 ],
@@ -218,7 +220,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "log out",
+                "description": "Log out",
                 "consumes": [
                     "application/json"
                 ],
@@ -254,7 +256,7 @@
         },
         "/auth/v1/refresh": {
             "post": {
-                "description": "refresh tokens",
+                "description": "Refresh tokens",
                 "consumes": [
                     "application/json"
                 ],
@@ -301,7 +303,7 @@
         },
         "/auth/v1/sign-in": {
             "post": {
-                "description": "log in with an existing account",
+                "description": "Log in with an existing account",
                 "consumes": [
                     "application/json"
                 ],
@@ -348,7 +350,7 @@
         },
         "/auth/v1/sign-up": {
             "post": {
-                "description": "create new account",
+                "description": "Create new account",
                 "consumes": [
                     "application/json"
                 ],
@@ -372,8 +374,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/response.Tokens"
                         }
